--- a/Warehouse/Info.plist
+++ b/Warehouse/Info.plist
@@ -15,15 +15,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CFBundleVersion</key>
-	<string>220518</string>
+	<string>220602</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>bla-bla-bla</string>
+	<string>Kamera zugriff erlauben</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>bla-bla-bla</string>
+	<string>Foto zugriff erlauben</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
